--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import '../../base.css'
 ---
 
 <Layout title="Welcome to Astro.">
-	<main class="flex flex-col m-auto gap-4 justify-center items-center">
+	<main class="flex flex-col m-4 gap-4 justify-center items-center ">
 		<h1 class="text-[4rem]">Welcome to <span class="text-gradient font-semibold">my first Astro website </span></h1>
-		<p class="text-[1.2rem] ">
+		<p class="text-[1.2rem] max-w-[40rem]">
 			I'm Agutín Rojas, a simple but passsionate web developer. I'm passing through this technology, I'm planning to learn to make projects with astro in the future. <br />
 			<strong class="opacity-90 text-indigo-900">Below Some links if you want to learn Astro too!</strong> Ok bye:
 		</p>
