--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 
 		<title>{title}</title>
 	</head>
-	<body class="flex justify-between select-none h-screen">
+	<body class="flex justify-center items-center select-none min-h-screen">
 		<slot />
 	</body>
 </html>
